--- a/templates/login.html
+++ b/templates/login.html
@@ -69,6 +69,20 @@
     .text-primary {
         color: hsl(var(--primary));
     }
+    .footer-icon-right {
+    background-color: #55a68e;
+    border-radius: 16px;
+    width: auto;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 1em;
+    }
+    .footer-icon-right button {
+    font-size: 0.8em;
+    }
   </style>
 </head>
 <body>
@@ -107,5 +121,10 @@
       </div>
     </div>
   </div>
+  <div class="footer">
+        <div class="footer-icon-right">
+            <button><a href="/register">Register</a></span>
+        </div>
+    </div>
 </body>
 </html>
